# tva

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  benchmarks.html  book.toml  build-docs.ps1  combining.html  conventions.html  design.html  expr-syntax.html  expr.html  filtering.html  format-conversion.html  from.html  index.html  ordering.html  organization.html  plot.html  print.html  reshape.html  searcher-c2a407aa.js  searchindex-02f814f1.js  searchindex-049a590a.js  searchindex-051cc6b3.js  searchindex-07c5515d.js  searchindex-13a8f441.js  searchindex-1b52719f.js  searchindex-207fd3ee.js  searchindex-26758a87.js  searchindex-27eaacd2.js  searchindex-2bd52ff7.js  searchindex-2dfa081b.js  searchindex-2e83e0e4.js  searchindex-2faba0e3.js  searchindex-4a78dc98.js  (+90 more)
.github/workflows/: build.yml  codecov.yml  publish.yml
benches/: arc_clone.rs  arc_optimization.rs  expr_eval.rs  parse_benchmark.rs  string_arc.rs  tsv_next_line.rs  tsv_parse.rs  tsv_reader.rs  tsv_reader_sse2.rs  tsv_simd_compare.rs  tsv_strategy_compare.rs  value_arc.rs
data/: billboard.tsv  pet_names.tsv  relig_income.tsv  sample.html  semester.tsv  world_bank_pop.tsv
docs/: README.md  SUMMARY.md  benchmarks.md  combining.md  conventions.md  design.md  developer.md  expr-syntax.md  expr.md  fields.md  filtering.md  format-conversion.md  from.md  io.md  ordering.md  organization.md  plot.md  reshape.md  selection.md  selectors.md  statistics.md  syntax-design.md  to.md  transformation.md  tsv-utils-overview.md  utilities.md
docs/data/: blank_example.tsv  diamonds.48.tsv  fish_encounters.tsv  household.tsv  input.csv  warpbreaks.tsv  who.tsv
docs/expr/: expressions.md  fmt.md  functions.md  introduction.md  literals.md  operators.md  others.md  rosetta.md  syntax.md  variables.md
docs/help/: append.md  bin.md  blank.md  check.md  expr.md  fields.md  fill.md  filter.md  from_csv.md  from_html.md  from_xlsx.md  header.md  join.md  keep_header.md  longer.md  md.md  nl.md  plot_bin2d.md  plot_box.md  plot_point.md  reverse.md  sample.md  select.md  slice.md  sort.md  split.md  stats.md  to_csv.md  to_md.md  to_xlsx.md  transpose.md  uniq.md  wider.md
expr/: expressions.html  fmt.html  functions.html  introduction.html  literals.html  operators.html  others.html  rosetta.html  syntax.html  variables.html
help/: append.html  bin.html  blank.html  check.html  expr.html  fields.html  fill.html  filter.html  from_csv.html  from_html.html  from_xlsx.html  join.html  keep_header.html  longer.html  md.html  nl.html  plot_bin2d.html  plot_box.html  plot_point.html  reverse.html  sample.html  select.html  slice.html  sort.html  split.html  stats.html  to_csv.html  to_xlsx.html  transpose.html  uniq.html  wider.html
scripts/: build-docs.sh
src/: lib.rs  libs.rs  tva.rs
src/cmd_tva/: append.rs  bin.rs  blank.rs  check.rs  common.rs  dedup.rs  eval.rs  expr.rs  extend.rs  fill.rs  filter.rs  from_csv.rs  header.rs  join.rs  keep_header.rs  longer.rs  md.rs  mod.rs  mutate.rs  nl.rs  reverse.rs  sample.rs  select.rs  slice.rs  sort.rs  split.rs  stats.rs  transpose.rs  uniq.rs  wider.rs
src/cmd_tva/from/: csv.rs  html.rs  mod.rs  xlsx.rs
src/cmd_tva/plot/: bin2d.rs  box.rs  mod.rs  point.rs
src/cmd_tva/to/: csv.rs  md.rs  mod.rs  xlsx.rs
src/libs/: aggregation.rs  cell.rs  cli.rs  fields.rs  filter.rs  fmt.rs  io.rs  key.rs  mod.rs  number.rs  parse.rs  sampling.rs  select.rs  stats.rs
src/libs/aggregation/: aggregator.rs  (+6 more)
tests/: cli_append.rs  cli_append_coverage.rs  cli_bin.rs  cli_bin_coverage.rs  cli_blank.rs  cli_blank_coverage.rs  cli_check.rs  cli_dedup.rs  cli_eval.rs  cli_expr.rs  cli_expr_docs.rs  cli_expr_docs_functions.rs  cli_expr_docs_rosetta.rs  cli_expr_fmt.rs  cli_expr_global_var.rs  cli_expr_rosetta.rs  cli_extra_coverage.rs  cli_fill.rs  cli_fill_coverage.rs  cli_filter.rs  cli_filter_generated_str.rs  cli_filter_headers.rs  cli_filter_same_field.rs  cli_filter_upstream_basic.rs  cli_filter_upstream_errors.rs  cli_filter_upstream_ff.rs  cli_filter_upstream_field_list.rs  cli_filter_upstream_is_numeric.rs  cli_filter_upstream_labels_empty.rs  cli_filter_upstream_length.rs  cli_filter_upstream_misc.rs  cli_filter_upstream_regex.rs  cli_filter_upstream_strings.rs  cli_from_csv.rs  cli_from_csv_coverage.rs  cli_from_html.rs  cli_from_html_pup.rs  cli_from_xlsx.rs  cli_header.rs  cli_join.rs  (+30 more)
tests/common/: mod.rs
(+151 files in other folders)
