[package]
name = "tva"
version = "0.2.1"
authors = ["wang-q <wang-q@outlook.com>"]
description = "Tab-separated Values Assistant"
documentation = "https://github.com/wang-q/tva"
homepage = "https://github.com/wang-q/tva"
repository = "https://github.com/wang-q/tva"
readme = "README.md"
categories = ["command-line-utilities", "science"]
license = "MIT"
edition = "2021"
publish = true

[lib]
name = "tva"
path = "src/lib.rs"

[[bin]]
name = "tva"
path = "src/tva.rs"

[dependencies]
clap = { version = "4.3.12", features = ["cargo"] }
anyhow = "1.0.72"
regex = "1.9.1"
flate2 = "1.0.26"

indexmap = "2.0.0"
intspan = "0.8.7"

rapidhash = { version = "1.4.0", features = ["rng"] }
csv = "1.3.1"
markdown-table-formatter = "0.3.0"
rust_xlsxwriter = { version = "0.93.0", features = ["enhanced_autofit"] }
calamine = "0.26.1"

tempfile = "3.6.0"
unicode-segmentation = "1.12.0"
memchr = "2.8.0"
ryu = "1.0.23"
smallvec = "1.15.1"
ahash = "0.8.12"
memmap2 = "0.9.10"

[build-dependencies]

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.3"
criterion = "0.5"
simd-csv = "0.11"

[[bench]]
name = "parse_benchmark"
harness = false

[profile.release]
lto = true
