[package]
name = "tva"
version = "0.2.5"
authors = ["wang-q <wang-q@outlook.com>"]
description = "Tab-separated Values Assistant"
documentation = "https://github.com/wang-q/tva"
homepage = "https://github.com/wang-q/tva"
repository = "https://github.com/wang-q/tva"
readme = "README.md"
categories = ["command-line-utilities", "science"]
license = "MIT"
edition = "2021"
publish = true

[lib]
name = "tva"
path = "src/lib.rs"

[[bin]]
name = "tva"
path = "src/tva.rs"

[dependencies]
clap = { version = "4.3.12", features = ["cargo"] }
anyhow = "1.0.72"
thiserror = "1.0"
regex = "1.9.1"
flate2 = "1.0.26"

indexmap = "2.0.0"
intspan = "0.8.7"

rapidhash = { version = "1.4.0", features = ["rng"] }
csv = "1.3.1"
markdown-table-formatter = "0.3.0"
rust_xlsxwriter = { version = "0.93.0", features = ["enhanced_autofit"] }
calamine = "0.26.1"

tempfile = "3.6.0"
unicode-segmentation = "1.12.0"
memchr = "2.8.0"
smallvec = "1.15.1"
ahash = "0.8.12"
memmap2 = "0.9.10"

# float <=> string
ryu = "1.0.23"
lexical = "7.0.5"

# html
scraper = "0.25.0"

pest = "2.7"
pest_derive = "2.7"
md5 = "0.7"
sha2 = "0.10"
base64 = "0.22"
chrono = "0.4"

# TUI
ratatui = "0.29"
crossterm = "0.28"
colored = "2.0"

[build-dependencies]

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.3"
criterion = "0.5"
simd-csv = "0.11"

[[bench]]
name = "parse_benchmark"
harness = false

[profile.release]
lto = true
